pkgutils: update to 5.40.11 and updated CFLAGS

--- a/pkgutils/pkgmk.conf
+++ b/pkgutils/pkgmk.conf
@@ -2,7 +2,7 @@
 # /etc/pkgmk.conf: pkgmk(8) configuration
 #
 
-export CFLAGS="-march=armv8-a+crc+simd -mtune=cortex-a72 -ftree-vectorize -O2 -pipe -fomit-frame-pointer"
+export CFLAGS="-march=armv8-a+crc+simd -mtune=cortex-a72 -ftree-vectorize -O2 -pipe -fomit-frame-pointer -fPIC"
 export CXXFLAGS="${CFLAGS}"
 
 # export JOBS=$(nproc)
